<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calendar</string>
    <string name="widget_name">Calendar</string>
    <string name="widget_mini_name">Calendar (mini)</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="enable_persian_digits">Enable Persian Digits</string>
    <string name="persian_digits">Persian Digits</string>
    <string name="showing_clock_on_widget">Show the clock on widget</string>
    <string name="clock_on_widget">Clock on the Widget</string>
    <string name="showing_clock_in_24">Show the clock in 24 hour</string>
    <string name="clock_in_24">Clock in 24 hour</string>
    <string name="about">About</string>
    <string name="gpl_logo">GPL Logo</string>
    <string name="widget_text_colors">Widget Text Colors</string>
    <string name="clock">Clock</string>
    <string name="date">Date</string>
    <string name="date_converter">Date Converter</string>
    <string name="logo">Logo</string>
    <string name="dari_months">Dari Months</string>
    <string name="enable_dari">Enable Dari Months</string>
    <string name="widget_notification_dashclock">Widget, notification bar and DashClock</string>
    <string name="general">General</string>
    <string name="widget_text_color">Widget Text Color</string>
    <string name="select_widgets_text_color">Select custom color for widgets texts</string>
    <string name="pray_times_calculation_setting">Pray Times Calculation Setting</string>
    <string name="notify_date">Enable Date Notification</string>
    <string name="enable_notify">Persistent notification for all date types, needs device restart after turning it off</string>
    <string name="select_skin">Select a skin</string>
    <string name="skin">Skin</string>
    <string name="pray_methods">Calculation methods</string>
    <string name="pray_methods_calculation">Calculation methods for pray times and Qibla compass</string>
    <string name="altitude">Altitude</string>
    <string name="altitude_praytime">in meter (optional)</string>
    <string name="gps_location">Get location from GPS or network</string>
    <string name="gps_location_help">Other options are not needed if this is possible</string>
    <string name="location">Location</string>
    <string name="location_help">If none of them, specify it below</string>
    <string name="showing_iran_time">Widgets and notifications in Iran TimeZone</string>
    <string name="iran_time">Iran Time</string>
    <string name="qibla_compass">Compass/Qibla</string>
    <string name="compass">Compass</string>
    <string name="compass_not_found">Compass sensor not found</string>

    <string name="month_names">Month Names</string>
    <string name="calendar_font">Calendar Font</string>
    <string name="application_language">Application Language</string>
    <string name="language">Language</string>
    <string name="calendar_language">Calendar Language</string>
    <string name="calendar_language_summary">The language to show the month and day names in</string>
    <string name="version">Version</string>
    <string name="calendar_font_summary">Change the font for the calendar</string>
    <string name="athan">Athan</string>
    <string name="athan_alarm_summary">Prayers to trigger the alarm for</string>
    <string name="athan_alarm">Athan Alarm</string>
    <string name="athan_sound">Athan Sound</string>
    <string name="match_system">Match System</string>
    <string name="athan_volume_summary">Set the volume for the alarm</string>
    <string name="athan_volume">Athan Volume</string>
    <string name="tap_to_stop_athan">Tap to stop</string>
    <string name="playing_athan">Playing Athan</string>
    <string name="athan_disabled_summary">To set the Athan alarm, choose a location or enter the coordinates above</string>
    <string name="athan_gap">Athan Gap</string>
    <string name="athan_gap_summary">How long ahead of the Athan should the alarm be triggered (in minutes)</string>
    <string name="closeDrawer">Close</string>
    <string name="openDrawer">Open</string>
    <string name="azan1">Fajr</string>
    <string name="azan2">Dhuhr</string>
    <string name="azan3">Asr</string>
    <string name="azan4">Maghrib</string>
    <string name="azan5">Isha</string>
    <string name="aftab1">Sunrise</string>
    <string name="aftab2">Sunset</string>
    <string name="aftab3">Midnight</string>
    <string name="owghat">Pray times</string>
    <string name="events">Events</string>
    <string name="today">Today</string>
    <string name="select_type_date">Select date type</string>
    <string name="year">Year</string>
    <string name="mount">Month</string>
    <string name="day">Day</string>
    <string name="select_year">Select year</string>
    <string name="select_mount">Select month</string>
    <string name="select_day">Select day</string>
    <string name="date_exception">The date you entered was not valid!</string>
    <string name="in_city_time">in</string>
    <string name="islamic_offset">Islamic offset</string>
    <string name="islamic_offset_summary"></string>

    <string-array name="calendar_type">
        <item>Persian Calendar</item>
        <item>Islamic Calendar</item>
        <item>Gregorian</item>
    </string-array>

    <string name="date_copied_clipboard">Copied to clipboard</string>
    <string name="stop">Stop</string>
    <string name="goto_date">Go to date</string>
    <string name="select">Select</string>
    <string name="pleasewaitgps">Please wait… If nothing appeared after one minute you probably should try other options</string>
    <string name="holidaysIncompletenessWarning">Holidays of the selected year may not be complete and reliable.</string>
    <string name="shouldBeUpdated">Holidays of the selected year may not be complete and reliable. Consider an update for the app, if exists.</string>
</resources>
