<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground"
    android:orientation="vertical">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/view_padding">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/calendarTypeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/select_type_date"
                android:textColor="?attr/colorTextSecond"
                android:textSize="@dimen/text_size_description"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/calendarTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/calendar_type"
                android:prompt="@string/day"
                android:textColor="?attr/colorTextNormal"
                android:textSize="@dimen/text_size_description"/>

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/containerDateSelector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layoutDirection="ltr"
            android:orientation="horizontal"
            android:padding="@dimen/converter_padding"
            android:weightSum="12">

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/containerDaySelector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layoutDirection="rtl"
                android:orientation="vertical"
                android:padding="@dimen/converter_padding">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/converterLabelDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/day"
                    android:textColor="?attr/colorTextSecond"
                    android:textSize="@dimen/text_size_description"/>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/daySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:foregroundGravity="right"
                    android:gravity="right"
                    android:prompt="@string/select_day"
                    android:spinnerMode="dialog"
                    android:textColor="?attr/colorTextNormal"
                    android:textSize="30sp"/>

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/containerMonthSelector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layoutDirection="rtl"
                android:orientation="vertical"
                android:padding="@dimen/converter_padding">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/converterLabelMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/mount"
                    android:textColor="?attr/colorTextSecond"
                    android:textSize="@dimen/text_size_description"/>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/monthSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/select_mount"
                    android:spinnerMode="dialog"
                    android:textColor="?attr/colorTextNormal"
                    android:textSize="@dimen/text_size_description"/>

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/containerYearSelector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layoutDirection="rtl"
                android:orientation="vertical"
                android:padding="@dimen/converter_padding">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/converterLabelYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/year"
                    android:textColor="?attr/colorTextSecond"
                    android:textSize="@dimen/text_size_description"/>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/yearSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/select_year"
                    android:spinnerMode="dialog"
                    android:textColor="?attr/colorTextNormal"
                    android:textSize="@dimen/text_size_description"/>

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.CardView
            android:id="@+id/info_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            app:cardBackgroundColor="?attr/colorCard">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical"
                app:divider="?attr/appDivider"
                app:dividerPadding="@dimen/divider_margin"
                app:showDividers="middle">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal"
                    android:padding="@dimen/card_padding">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/date0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:textColor="?attr/colorTextPrimary"
                        android:textSize="@dimen/text_size_title"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/more_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="@dimen/card_padding">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginLeft="@dimen/icon_margin"
                        android:layout_marginStart="@dimen/icon_margin"
                        android:layout_toEndOf="@+id/dateContainer"
                        android:layout_toRightOf="@+id/dateContainer"
                        android:gravity="center"
                        android:tint="?attr/colorIcon"
                        app:srcCompat="@drawable/ic_swap_vertical_circle"/>

                    <android.support.v7.widget.LinearLayoutCompat
                        android:id="@+id/dateContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/date1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="?attr/colorTextNormal"
                            android:textSize="@dimen/text_size_description"/>

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/date2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/item_calendar_margin_top"
                            android:textColor="?attr/colorTextNormal"
                            android:textSize="@dimen/text_size_description"/>

                    </android.support.v7.widget.LinearLayoutCompat>

                </RelativeLayout>

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.CardView>

    </android.support.v7.widget.LinearLayoutCompat>

</ScrollView>
